@@ -2,13 +2,9 @@ apply plugin: "io.spinnaker.plugin.service-extension"
 apply plugin: 'java'
 apply plugin: "groovy"
 
-sourceCompatibility = 17
-targetCompatibility = 17
-
-repositories {
-  mavenLocal()
-  mavenCentral()
-  jcenter()
+java {
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
 }
 
 sourceSets.main.java.srcDirs = ["src/main/java"]
@@ -19,10 +15,20 @@ spinnakerPlugin {
   requires = "clouddriver>=7.1.0"
 }
 
+repositories {
+  mavenLocal()
+  mavenCentral()
+  jcenter() { allowInsecureProtocol = true }
+  maven { 
+    url "http://dl.bintray.com/spinnaker-releases/jars/" 
+    allowInsecureProtocol = true
+  }
+}
+
 dependencies {
   implementation(enforcedPlatform("io.spinnaker.clouddriver:clouddriver-bom:${clouddriverVersion}"))
   implementation "com.google.guava:guava"
-  compileOnly "org.codehaus.groovy:groovy-all"
+  compileOnly "org.apache.groovy:groovy:4.0.15"
   compileOnly (group: 'org.springframework', name: 'spring-context')
   compileOnly (group: 'io.spinnaker.kork', name: 'kork-plugins-spring-api')
   compileOnly (group: 'org.springframework', name: 'spring-web')
@@ -38,7 +44,7 @@ dependencies {
   compileOnly 'com.amazonaws:aws-java-sdk'
   compileOnly 'org.projectlombok:lombok'
   compileOnly 'com.amazonaws:aws-java-sdk-core'
-  compileOnly "org.codehaus.groovy:groovy"
+  compileOnly "org.apache.groovy:groovy:4.0.15"
 
   annotationProcessor(platform("io.spinnaker.clouddriver:clouddriver-bom:${clouddriverVersion}"))
   annotationProcessor "org.projectlombok:lombok"
@@ -57,8 +63,21 @@ dependencies {
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
   testImplementation group: 'org.springframework', name: 'spring-web'
   testImplementation 'com.amazonaws:aws-java-sdk-core'
-  testImplementation "org.codehaus.groovy:groovy"
-  testImplementation "org.spockframework:spock-core"
+  testImplementation "org.apache.groovy:groovy:4.0.15"
+  testImplementation "org.spockframework:spock-core:2.3-groovy-4.0"
+}
+
+// Add resolution strategy to fix Groovy conflict
+configurations.all {
+  resolutionStrategy {
+    force 'org.apache.groovy:groovy:4.0.15'
+    force 'org.apache.groovy:groovy-json:4.0.15'
+    force 'org.apache.groovy:groovy-templates:4.0.15'
+    
+    // Exclude conflicting Groovy modules
+    exclude group: 'org.codehaus.groovy', module: 'groovy'
+    exclude group: 'org.codehaus.groovy', module: 'groovy-all'
+  }
 }
 
 test {
@@ -66,4 +85,13 @@ test {
   testLogging {
     events "passed", "skipped", "failed", "standardOut", "standardError"
   }
+  
+  // Retain Java 17 module system compatibility flags for tests
+  jvmArgs = [
+    '--add-opens=java.base/java.lang=ALL-UNNAMED',
+    '--add-opens=java.base/java.util=ALL-UNNAMED',
+    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+    '--add-opens=java.base/java.text=ALL-UNNAMED',
+    '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED'
+  ]
 }
